Pixi - Fix layout bugs (#4656)
* 🐛 Fix section z index

* 🐛 Fix tablet brakpoint

* 🐛 Adapt gradient position

* 🐛 Fix gradient/stripes positioning for tablet bp

--- a/frontend/scss/components/molecules/input-bar.scss
+++ b/frontend/scss/components/molecules/input-bar.scss
@@ -14,6 +14,7 @@
 
 .#{molecule('input-bar')} {
   $inputBar: &;
+  z-index: 10;
   padding: 0 15px 30px 15px;
 
   @media (min-width: 768px) {
@@ -76,7 +77,7 @@
       font-size: 18px;
       font-weight: bold;
 
-      @media (min-width: 720px) {
+      @media (min-width: 768px) {
         padding: 0 15px;
       }
 
