--- a/frontend/scss/components/molecules/pixi-status-intro.scss
+++ b/frontend/scss/components/molecules/pixi-status-intro.scss
@@ -7,6 +7,7 @@
   $status-intro: &;
   position: relative;
   display: flex;
+  z-index: 10;
 
   &-text {
     max-width: 720px;
@@ -104,6 +105,7 @@
       &-text {
         visibility: hidden;
       }
+
       &-banner {
         pointer-events: all;
         visibility: visible;
@@ -130,6 +132,7 @@
       &-banner {
         &-ctas {
           display: flex;
+
           @media (max-width: 480px) {
             flex-direction: column;
           }
